# compiler_task_sber

./: CMakeLists.txt  README.md  input.json
include/: encoder.hpp
src/: encoder.cpp  main.cpp  utilits.cpp
tests/: encoder_test.cpp
